
(87) Removed tests directory


*******************************************************************************************
* Changes on 03 July 2003
*******************************************************************************************

(88) Removed unused char *ptr from freeglut_misc.c

*******************************************************************************************
* Changes on 17 July 2003
*******************************************************************************************

(89) Changed the overlay (freeglut_state.c:662) to return FALSE, as it's not implemented yet.

(90) Applied John F. Fay's fixes to freeglut.dsp and freeglut_static.dsp


*******************************************************************************************
* Changes on 21 July 2003
*******************************************************************************************

(91) src/Makefile.am:38  Changed versioning to 11:0:8 thanks to Bernhard Kaindl


*******************************************************************************************
* Changes on 22 July 2003
*******************************************************************************************

(92) freeglut.lsm:3  Removed 'beta' label for next release, thanks to Bernhard Kaindl.


*******************************************************************************************
* Changes on 23 July 2003
*******************************************************************************************

(93) doc/Makefile.am:4  Removed trailing backslash and added an empty last line

(94) src/freeglut_window.c  Windowing fixes from John F.


*******************************************************************************************
* Changes on 23 July 2003
*******************************************************************************************

(95) src/freeglut_initial.c:91  Added check for SOLARIS OS (Dave Reed)

(96) src/freeglut_window.c:551  Removed extra carriage return for Windows users (John F. Fay)
